--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     implementation 'com.github.cafsoft:CAFSoftFoundation:2.6.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
